fixed padding and alignment in todolistdisplaymain

--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,9 @@
   color: #838383;
 } */
 
-/* .todo-text {
+.todo-text {
   text-align: center;
-} */
+}
 
 .todo-title {
   font-size: 18px;
